fix login/signup pages on mobile

--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -2,6 +2,8 @@
 @import "base/base";
 @import "neat/neat";
 
+$mobile: new-breakpoint(max-width 500px 4);
+
 //header
 div#header {
   @include outer-container(100%);
@@ -32,6 +34,9 @@ section {
 
   .sm-column {
     @include span-columns(5);
+    @include media($mobile) {
+      @include shift(4);
+    }
   }
 }
 
